fix line-height to avoid cropped characters

--- a/src/css/project_teaser.css
+++ b/src/css/project_teaser.css
@@ -73,7 +73,7 @@
   margin: 10px;
   font-size: 16px;
   line-height: 22px;
-  height: 41px;
+  height: 44px;
   font-weight: bold;
   overflow: hidden;
 }
